notification circle issue fixed

--- a/backend/css/bootstrap.css
+++ b/backend/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ccf017; }
+  background: #645a9e; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #6bc966; }
+  background: #7a996b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #77c65b; }
+  background: #7b3561; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #940964; }
+  background: #242e5f; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #ef7d7a; }
+  background: #44f05a; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #d6331f; }
+  background: #20d3b9; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #85d87b; }
+  background: #46e183; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #687a6c; }
+  background: #860eec; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #2713b2; }
+  background: #bacca2; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #446e52; }
+  background: #04fe87; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #7a5728; }
+  background: #a9021a; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #9a70b3; }
+  background: #42be6d; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #ed1ada; }
+  background: #4d2277; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #1a7cdd; }
+  background: #879deb; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #718756; }
+  background: #7129c7; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #852d93; }
+  background: #13a1c3; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #e194f6; }
+  background: #e6a25f; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #917252; }
+  background: #30b965; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #5f74c5; }
+  background: #cf0f7b; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #0de8c4; }
+  background: #4a106e; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #ea745e; }
+  background: #1df035; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #04b5c8; }
+  background: #7a0a1d; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #04fbb7; }
+  background: #468742; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #4dd461; }
+  background: #4d54e2; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #d66fdb; }
+  background: #808823; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #fa65de; }
+  background: #185a0d; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #ed701d; }
+  background: #6d2b4c; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #949952; }
+  background: #f31505; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #9fc6df; }
+  background: #afe71e; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #5ce189; }
+  background: #cc31a6; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #9899ef; }
+  background: #4e54b0; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #bf7ec5; }
+  background: #ffddf8; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #d2d824; }
+  background: #a6b247; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #698619; }
+  background: #cff93b; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #3ddd43; }
+  background: #9e0585; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #c8f9fd; }
+  background: #baf849; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #cd533c; }
+  background: #632494; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #b2d6f6; }
+  background: #3f8b07; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #2c15c7; }
+  background: #66f4f3; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #d3e945; }
+  background: #7e9f43; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #60312c; }
+  background: #15b7ca; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #54b244; }
+  background: #2ca5a3; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #b0819c; }
+  background: #d21a40; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #99791d; }
+  background: #90b88d; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #82b113; }
+  background: #2b97ad; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #3710a4; }
+  background: #9dfb6c; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #ef70fc; }
+  background: #06eff3; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #53bd60; }
+  background: #ae89eb; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #7ddc11; }
+  background: #8e2797; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #cfd1c0; }
+  background: #fd6e3c; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #b98c58; }
+  background: #176c25; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #2fb9b7; }
+  background: #2a104d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #881710; }
+  background: #100a28; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #2c8557; }
+  background: #d5c7cd; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #3e20f3; }
+  background: #57eea5; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a0426e; }
+  background: #ce4cd1; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #25deea; }
+  background: #93e08a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #cbed6b; }
+  background: #79f850; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #6d6f58; }
+  background: #a764c7; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #1a97f1; }
+  background: #67ba44; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #9dafd8; }
+  background: #cb7830; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #a1fa79; }
+  background: #5580e1; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #1287f0; }
+  background: #174f30; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #01ffa2; }
+  background: #e03889; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #d38707; }
+  background: #961de8; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #d543f6; }
+  background: #23fdb1; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #5ef60a; }
+  background: #0f0489; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #13ba37; }
+  background: #50932e; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #4c271b; }
+  background: #26be72; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #f87f68; }
+  background: #a01e73; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #89d021; }
+  background: #7d265b; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #5c5b0e; }
+  background: #1c3706; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #c84e2c; }
+  background: #48b7e5; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #3bb862; }
+  background: #dec4b3; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #ef48af; }
+  background: #7c4464; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #bdb3a9; }
+  background: #2247e8; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #1538a0; }
+  background: #e96e3e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #f1765e; }
+  background: #53e88e; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #3548e2; }
+  background: #cc3b50; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #ff7912; }
+  background: #bf5342; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #1e28b1; }
+  background: #547a7c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #33373c; }
+  background: #506357; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #d7a305; }
+  background: #4ef5a4; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #951338; }
+  background: #f9b8d7; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #17f47a; }
+  background: #18f8bb; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #19e154; }
+  background: #3e35e5; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #04c79f; }
+  background: #30bf6b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #42c36d; }
+  background: #ff5197; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #e93b63; }
+  background: #ef5cf9; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #e29834; }
+  background: #938938; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #64c7ab; }
+  background: #ece527; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #31a877; }
+  background: #94c345; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #0ea3cc; }
+  background: #08e225; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #1acc2f; }
+  background: #3baf85; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #8b7e31; }
+  background: #d649cb; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #e3513a; }
+  background: #6dd74b; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #c97d8e; }
+  background: #c11045; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #8ce7cf; }
+  background: #8d1e83; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #a087c2; }
+  background: #4da3ae; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #a9c573; }
+  background: #a0b9ca; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
