--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #6d1081; }
+  background: #f0e963; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #acd36d; }
+  background: #012f4d; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #2705d2; }
+  background: #413e1d; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #f4eb25; }
+  background: #d7baaa; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #68d495; }
+  background: #4cee11; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #cdef7b; }
+  background: #f18170; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #17beed; }
+  background: #c49968; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #ecdae8; }
+  background: #b5cabc; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #f0e5e4; }
+  background: #587b59; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #bfb5b1; }
+  background: #c589c2; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #a2bf74; }
+  background: #2fa81a; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #dcde1c; }
+  background: #f72123; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #fc564e; }
+  background: #605ad4; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #abbac5; }
+  background: #a05cb5; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #75d2cc; }
+  background: #6f633a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #118440; }
+  background: #fd8dce; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #7be132; }
+  background: #dfa3bc; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #a02d4f; }
+  background: #22834c; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #3044a7; }
+  background: #681ebd; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #065a0c; }
+  background: #7ef02a; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #b1cebd; }
+  background: #c76b09; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #b5e93f; }
+  background: #02ee2e; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #02edfd; }
+  background: #b336e0; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #856f97; }
+  background: #e113e8; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #3d76ac; }
+  background: #9bcecc; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #8464e7; }
+  background: #1eb161; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #699ff4; }
+  background: #48d8c6; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #7d1b78; }
+  background: #10590b; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #bdab81; }
+  background: #4f0dc0; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #afb45b; }
+  background: #3e1dcc; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #b2f8ce; }
+  background: #f4f324; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #b0fd34; }
+  background: #c8a702; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #f50d07; }
+  background: #7486cf; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #05d4c7; }
+  background: #8020b4; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #675a80; }
+  background: #462e08; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #7c9c1f; }
+  background: #3d39b8; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #1ef787; }
+  background: #5f8eb2; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #f257bd; }
+  background: #b09f88; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #20551c; }
+  background: #6188a8; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #46bb28; }
+  background: #de5614; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #992294; }
+  background: #2dbe2d; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #9baafb; }
+  background: #5eb671; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #2588e5; }
+  background: #03774b; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #b2913c; }
+  background: #850dfd; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #366c34; }
+  background: #41e10c; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #c5bba6; }
+  background: #a6a781; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #e984d8; }
+  background: #16ccb0; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #5fc055; }
+  background: #16048c; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #635bc1; }
+  background: #543063; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #167c3c; }
+  background: #0f74ea; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #80380f; }
+  background: #bedb57; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #fa0f5f; }
+  background: #f8815c; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #4a62cd; }
+  background: #db209e; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #a09585; }
+  background: #490e97; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #d90244; }
+  background: #78df6a; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #260bac; }
+  background: #5bffeb; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #85c9f8; }
+  background: #ccbcef; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #3f4fa7; }
+  background: #a5d939; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #038804; }
+  background: #fad406; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #43f0eb; }
+  background: #3c7f1f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #815a39; }
+  background: #9a5d7c; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c447b2; }
+  background: #fb8419; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #d3e086; }
+  background: #8efdea; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #034fde; }
+  background: #16b9a2; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #a87887; }
+  background: #67920f; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #f370b5; }
+  background: #f91059; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #3955b2; }
+  background: #b7fc5c; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #4eaa43; }
+  background: #8627ca; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #048fc7; }
+  background: #c20b5f; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #e5564c; }
+  background: #0b76d3; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #ae738c; }
+  background: #5a89c4; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c10f78; }
+  background: #5155aa; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #47a549; }
+  background: #a14730; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #ef549a; }
+  background: #b18872; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #ff2620; }
+  background: #975475; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #504af9; }
+  background: #0a7f89; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #e6fdc1; }
+  background: #b020ef; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #2d0396; }
+  background: #f6426c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #a1e6a0; }
+  background: #6ab015; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #03be73; }
+  background: #26ac17; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #020aff; }
+  background: #6a2e3f; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #f6f455; }
+  background: #19547d; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #29ceb7; }
+  background: #e54510; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #3fe31d; }
+  background: #ea4213; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #fddc2e; }
+  background: #f9509d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #87608a; }
+  background: #4b93e8; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #0306c2; }
+  background: #f8b62a; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #606efd; }
+  background: #c0aa24; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #d95bd5; }
+  background: #e735e1; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #9edb1e; }
+  background: #fd2f5c; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #5c13d3; }
+  background: #46babd; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #3edb0e; }
+  background: #783630; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #261307; }
+  background: #3f9202; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #510bc2; }
+  background: #22b0dc; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #cc24ee; }
+  background: #f51afc; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #34d271; }
+  background: #af0c14; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b84b78; }
+  background: #79fbd3; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #c5047c; }
+  background: #4de962; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #015dfb; }
+  background: #6e0ec8; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #152a63; }
+  background: #5ed219; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11577,11 +11577,15 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -11993,7 +11997,13 @@ input:checked + .sliders:before {
         content: "";
         background: url(../images/right-arrow.png) no-repeat;
         width: 10px;
-        height: 16px; }
+        height: 16px;
+        position: absolute;
+        top: 0px;
+        bottom: 0px;
+        display: flex;
+        margin: auto;
+        right: -8px; }
     .process-button-wrapper ul .sucess-active {
       background: #fff;
       border: 2px solid #776fff;
@@ -12038,6 +12048,10 @@ input:checked + .sliders:before {
     width: 10px;
     height: 16px;
     right: -12px; }
+
+ul li:last-child .active-btn ::before {
+  content: "";
+  background: none !important; }
 
 .full-search-row form {
   width: 100%; }
@@ -12704,7 +12718,7 @@ td .check-container {
   background: #f00f00;
   color: #fff;
   padding: 3px 6px;
-  border-radius: 100%;
+  border-radius: 25px;
   font-size: 13px;
   border: 1px solid white;
   position: absolute;
@@ -12841,8 +12855,21 @@ select:focus {
   outline: none !important;
   outline: none -webkit-focus-ring-color !important; }
 
-table .parent-row {
-  border-bottom: 1px solid #ecedf2; }
+table .parent-row,
+.child-row-no-td-border {
+  border-bottom: 1px solid #ecedf2 !important; }
+
+.c-gray-td {
+  padding: 8px;
+  background: #bbb;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  width: 33px;
+  height: 33px;
+  display: inline-block; }
 
 .page-item:first-child .page-link {
   margin-left: 0px;
