--- a/backend/scss/_fahad.scss
+++ b/backend/scss/_fahad.scss
@@ -2282,7 +2282,7 @@ td {
   background: #f00f00;
   color: #fff;
   padding: 3px 6px;
-  border-radius: 100%;
+  border-radius: 25px;
   font-size: 13px;
   border: 1px solid white;
   position: absolute;
