--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f0e963; }
+  background: #f45c04; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #012f4d; }
+  background: #d994d9; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #413e1d; }
+  background: #ee5cb5; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #d7baaa; }
+  background: #67855a; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #4cee11; }
+  background: #c38d85; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f18170; }
+  background: #d503e1; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #c49968; }
+  background: #8b5511; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #b5cabc; }
+  background: #4e2669; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #587b59; }
+  background: #4a6dc1; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #c589c2; }
+  background: #36c96b; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #2fa81a; }
+  background: #a04cb3; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #f72123; }
+  background: #0ec45b; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #605ad4; }
+  background: #8c33ad; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #a05cb5; }
+  background: #e89d8e; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #6f633a; }
+  background: #2bd254; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #fd8dce; }
+  background: #893840; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #dfa3bc; }
+  background: #f43560; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #22834c; }
+  background: #ab3a9d; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #681ebd; }
+  background: #d20fa4; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #7ef02a; }
+  background: #57f4ea; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #c76b09; }
+  background: #679642; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #02ee2e; }
+  background: #1d1016; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #b336e0; }
+  background: #7c2662; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #e113e8; }
+  background: #7a6ec8; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #9bcecc; }
+  background: #a077eb; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #1eb161; }
+  background: #540a36; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #48d8c6; }
+  background: #7de3cd; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #10590b; }
+  background: #3e4a8a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #4f0dc0; }
+  background: #dbd9aa; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #3e1dcc; }
+  background: #d2e36f; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #f4f324; }
+  background: #45c5e5; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #c8a702; }
+  background: #f092e9; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #7486cf; }
+  background: #781fcb; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #8020b4; }
+  background: #a278fd; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #462e08; }
+  background: #ca4b0d; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #3d39b8; }
+  background: #4436f8; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #5f8eb2; }
+  background: #1e9a31; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #b09f88; }
+  background: #75c1f9; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #6188a8; }
+  background: #da33de; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #de5614; }
+  background: #5a7c3e; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #2dbe2d; }
+  background: #54faa2; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #5eb671; }
+  background: #b5545e; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #03774b; }
+  background: #c0c746; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #850dfd; }
+  background: #385306; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #41e10c; }
+  background: #491db3; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #a6a781; }
+  background: #d98748; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #16ccb0; }
+  background: #71f264; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #16048c; }
+  background: #e31d2b; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #543063; }
+  background: #d115c1; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #0f74ea; }
+  background: #2c84ea; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #bedb57; }
+  background: #ff4a34; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #f8815c; }
+  background: #1887db; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #db209e; }
+  background: #20a2b7; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #490e97; }
+  background: #ed5a4b; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #78df6a; }
+  background: #b6f6a6; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #5bffeb; }
+  background: #1285bc; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #ccbcef; }
+  background: #4c49be; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #a5d939; }
+  background: #403382; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #fad406; }
+  background: #6d1408; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #3c7f1f; }
+  background: #cfbc53; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #9a5d7c; }
+  background: #ca464e; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #fb8419; }
+  background: #c823d0; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #8efdea; }
+  background: #ea3ff8; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #16b9a2; }
+  background: #7f1204; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #67920f; }
+  background: #e1e6dc; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #f91059; }
+  background: #e83310; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b7fc5c; }
+  background: #b4ba64; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #8627ca; }
+  background: #9d9695; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #c20b5f; }
+  background: #f072ff; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #0b76d3; }
+  background: #83ffd6; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #5a89c4; }
+  background: #a803ad; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #5155aa; }
+  background: #73a2e2; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #a14730; }
+  background: #d53724; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #b18872; }
+  background: #e0d86a; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #975475; }
+  background: #4872ad; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #0a7f89; }
+  background: #91af47; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #b020ef; }
+  background: #a899e4; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #f6426c; }
+  background: #030cc9; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #6ab015; }
+  background: #ce406b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #26ac17; }
+  background: #76a2f2; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #6a2e3f; }
+  background: #955232; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #19547d; }
+  background: #39a291; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #e54510; }
+  background: #dec081; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #ea4213; }
+  background: #c0a449; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #f9509d; }
+  background: #b032d8; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #4b93e8; }
+  background: #f1b114; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #f8b62a; }
+  background: #d262dc; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c0aa24; }
+  background: #5b39f8; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #e735e1; }
+  background: #1c6a6c; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #fd2f5c; }
+  background: #f93f0d; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #46babd; }
+  background: #dbfef2; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #783630; }
+  background: #ce9114; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #3f9202; }
+  background: #a54e5a; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #22b0dc; }
+  background: #c01bb7; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f51afc; }
+  background: #f54e91; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #af0c14; }
+  background: #23c6f9; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #79fbd3; }
+  background: #61bf6e; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #4de962; }
+  background: #1b9988; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6e0ec8; }
+  background: #8a6ad0; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #5ed219; }
+  background: #ba1525; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11655,7 +11655,7 @@ input:checked + .sliders:before {
   font-size: 14px; }
 
 .add-edit-connection-heading-row .add-edit-heading {
-  font-weight: normal !important; }
+  color: #4c4c4c; }
 
 .connector-config-row .form-control {
   padding: 9px 16px; }
