--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -832,7 +832,7 @@ input:checked + .sliders:before {
 }
 
 .add-edit-connection-heading-row .add-edit-heading {
-  font-weight: normal !important;
+  color: #4c4c4c;
 }
 
 .connector-config-row .form-control {
