--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f45c04; }
+  background: #2096d7; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #d994d9; }
+  background: #16d5f3; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ee5cb5; }
+  background: #e054f7; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #67855a; }
+  background: #47e7dd; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #c38d85; }
+  background: #edaa10; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #d503e1; }
+  background: #9e449a; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #8b5511; }
+  background: #4a61f0; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #4e2669; }
+  background: #e9bfc0; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #4a6dc1; }
+  background: #c1d71f; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #36c96b; }
+  background: #09e6af; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #a04cb3; }
+  background: #9da162; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #0ec45b; }
+  background: #83fd63; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #8c33ad; }
+  background: #e7dd5b; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #e89d8e; }
+  background: #389515; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #2bd254; }
+  background: #1bc17b; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #893840; }
+  background: #59208f; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #f43560; }
+  background: #aa49c3; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #ab3a9d; }
+  background: #266975; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #d20fa4; }
+  background: #50daa3; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #57f4ea; }
+  background: #97ba26; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #679642; }
+  background: #b6fffb; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #1d1016; }
+  background: #600ada; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #7c2662; }
+  background: #cb2009; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #7a6ec8; }
+  background: #4b1856; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a077eb; }
+  background: #eadb60; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #540a36; }
+  background: #888c68; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #7de3cd; }
+  background: #261a94; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #3e4a8a; }
+  background: #5b95e0; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #dbd9aa; }
+  background: #e4960a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #d2e36f; }
+  background: #983d31; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #45c5e5; }
+  background: #5eba83; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #f092e9; }
+  background: #43590c; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #781fcb; }
+  background: #9bbda7; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #a278fd; }
+  background: #689209; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #ca4b0d; }
+  background: #e49ab9; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #4436f8; }
+  background: #c1e133; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #1e9a31; }
+  background: #9c517e; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #75c1f9; }
+  background: #016bcb; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #da33de; }
+  background: #58e321; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #5a7c3e; }
+  background: #ea5eea; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #54faa2; }
+  background: #d80a88; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #b5545e; }
+  background: #1efc74; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c0c746; }
+  background: #418a04; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #385306; }
+  background: #3a80fa; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #491db3; }
+  background: #315ff1; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #d98748; }
+  background: #459863; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #71f264; }
+  background: #9eec6b; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e31d2b; }
+  background: #800a51; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #d115c1; }
+  background: #e36ed5; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2c84ea; }
+  background: #38e7ac; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #ff4a34; }
+  background: #225e75; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #1887db; }
+  background: #fcec30; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #20a2b7; }
+  background: #1d0a35; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #ed5a4b; }
+  background: #05c98a; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #b6f6a6; }
+  background: #5add97; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #1285bc; }
+  background: #6c2bef; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #4c49be; }
+  background: #123c4c; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #403382; }
+  background: #b44049; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #6d1408; }
+  background: #a3cc4c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #cfbc53; }
+  background: #41872b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #ca464e; }
+  background: #b6eeb2; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c823d0; }
+  background: #776578; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #ea3ff8; }
+  background: #d775c8; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #7f1204; }
+  background: #6901bb; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #e1e6dc; }
+  background: #21eacb; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #e83310; }
+  background: #323229; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b4ba64; }
+  background: #23d725; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #9d9695; }
+  background: #e6e3de; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #f072ff; }
+  background: #27bfcb; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #83ffd6; }
+  background: #7e066a; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #a803ad; }
+  background: #5f033a; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #73a2e2; }
+  background: #ad4a5e; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #d53724; }
+  background: #7dc84e; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #e0d86a; }
+  background: #f102e5; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #4872ad; }
+  background: #581172; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #91af47; }
+  background: #228f06; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #a899e4; }
+  background: #83bc87; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #030cc9; }
+  background: #af5634; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #ce406b; }
+  background: #6b9785; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #76a2f2; }
+  background: #5209a3; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #955232; }
+  background: #ef886e; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #39a291; }
+  background: #d0029d; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #dec081; }
+  background: #185239; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c0a449; }
+  background: #183a95; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b032d8; }
+  background: #757111; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #f1b114; }
+  background: #27567e; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #d262dc; }
+  background: #2935c4; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5b39f8; }
+  background: #d8fbb3; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #1c6a6c; }
+  background: #3b62e7; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #f93f0d; }
+  background: #ffc869; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #dbfef2; }
+  background: #c7f2e9; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #ce9114; }
+  background: #58a5c6; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #a54e5a; }
+  background: #011731; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #c01bb7; }
+  background: #9f66de; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f54e91; }
+  background: #30adc5; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #23c6f9; }
+  background: #389fab; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #61bf6e; }
+  background: #7d17bd; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #1b9988; }
+  background: #bcbcfb; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #8a6ad0; }
+  background: #9a5750; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ba1525; }
+  background: #c5309f; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9865,7 +9865,7 @@ table .bold-heading {
     margin-right: 30px; }
 
 .choose-file-modal {
-  margin-left: 8px; }
+  margin-left: 15px; }
 
 .region-checkbox {
   display: flex; }
@@ -13153,12 +13153,23 @@ table .parent-row,
   .notification-main-wrapper .adding-adapter-modal-header {
     margin-top: 15px !important; }
   .notification-main-wrapper .notification-model-header {
-    padding-top: 5px !important; } }
+    padding-top: 5px !important; }
+
+  .role-to-txt h2 {
+    padding-left: 0px; } }
 /*767 screen end here*/
 /*768 to 1023 screen css*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .LoginPanel {
-    padding: 20px; } }
+    padding: 20px; }
+
+  .role-to-txt h2 {
+    padding-left: 0px; } }
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .modal-add-connections-wrapper .choose-file-modal {
+    margin-left: 15px; }
+  .modal-add-connections-wrapper .region-checkbox {
+    padding: 0px !important; } }
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
   .query-wizard-exp-contents {
     overflow-x: auto; }
